[package]
name = "squire"
version = "0.1.0"
authors = ["oskarbraten <oskarbraten@users.noreply.github.com>"]
edition = "2018"

[dependencies]
url = "2.2.2"
tokio = { version = "1.8.2", features = ["full"] }
reqwest = { version = "0.11.4", features = ["stream", "gzip"] }
futures-util = "0.3.15"
crates-index = "0.17.0"
clap = "3.0.0-beta.2"
sha2 = "0.9.5"
regex = "1"
simple_logger = "1.11"
log = "0.4"